--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <link
       rel="stylesheet"
       href="./public/boxicons-2.1.4/css/boxicons.min.css"
     />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MNRW GROUP</title>
   </head>
